--- a/blog.html
+++ b/blog.html
@@ -18,11 +18,24 @@
         <div class="single-blog my-4 p-3 bg-secondary rounded-3">
             <h3>What is the difference between scoped and block scoped?</h3>
             <p class="text-light">
-                The main difference between the local scope and block scope is that the block statements (e.g. if conditions or for loops), don't create a new scope. So the var keyword will not have an effect, because the variables are still in the same scope. ES6 introduced block scope by using the let and const keywords.
+                The main difference between the local scope and block scope is that the block statements (e.g. if conditions or for loops), don't create a new scope. So the var keyword will not have an effect, because the variables are still in the same scope. ES6 introduced block scope by using the let and const keywords. <br>
+                Before diving in the scope categories that exist in JS, we have to define first what a block is. A block is a piece of code inside a set of curly braces {} and groups code statements together. An example of a block could be a function, like this: <br>
+                A variable exists inside or outside a block. If a variable is declared outside all functions or curly braces ({}), it exists in the global scope. The global variables can be accessed by any line of code in the program, including inside blocks.
             </p>
         </div>
         <div class="single-blog my-4 p-3 bg-secondary rounded-3">
-            <h3>Hello</h3>
+            <h3>How to work javascript event loop</h3>
+            <p class="text-light">
+                The Event Loop has one simple job — to monitor the Call Stack and the Callback Queue. If the Call Stack is empty, the Event Loop will take the first event from the queue and will push it to the Call Stack, which effectively runs it. Such an iteration is called a tick in the Event Loop. <br>
+                JavaScript has a runtime model based on an event loop, which is responsible for executing the code, collecting and processing events, and executing queued sub-tasks. This model is quite different from models in other languages like C and Java.
+            </p>
+        </div>
+        <div class="single-blog my-4 p-3 bg-secondary rounded-3">
+            <h3>How do show JavaScript undefined</h3>
+            <p class="text-light">
+                In a JavaScript program, the correct way to check if an object property is undefined is to use the typeof operator. If the value is not defined, typeof returns the 'undefined' string. <br>
+                get undefined value when you call a non-existent property or method of an object. In the above example, a function Sum does not return any result but still we try to assign its resulted value to a variable. So in this case, result will be undefined.
+            </p>
         </div>
     </main>
     
